--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,3 +39,21 @@ video {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.377);
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40rem;
+  transition: 0.5s;
+}
