--- a/client/src/index.css
+++ b/client/src/index.css
@@ -51,9 +51,16 @@ video {
 
 .modal {
   position: fixed;
-  top: 50%;
-  left: 50%;
+  top: 0%;
+  left: 0%;
   transform: translate(-50%, -50%);
   width: 40rem;
   transition: 0.5s;
+}
+
+@media screen and (min-width: 0.625rem) {
+  .modal {
+    top: 50%;
+    left: 50%;
+  }
 }
