Update two one column

--- a/client_v1/src/index.css
+++ b/client_v1/src/index.css
@@ -138,7 +138,7 @@ video {
 
 @media screen and (min-width: 1024px) {
   .grid-aside {
-    grid-template-columns: 3fr 2fr;
+    /* grid-template-columns: 3fr 2fr; */
   }
 }
 
