--- a/client_v1/src/index.css
+++ b/client_v1/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow-y: scroll;
+}
+
 *,
 *::before,
 *::after {
@@ -12,6 +16,12 @@
   margin: 0;
   padding: 0;
   font: inherit;
+}
+
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 img,
