--- a/client_v1/src/index.css
+++ b/client_v1/src/index.css
@@ -104,7 +104,36 @@ video {
     blink-caret 0.75s step-end infinite;
 }
 
-.blink-carot {
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 30;
+  background-color: rgba(0, 0, 0, 0.377);
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 35;
+  transform: translate(-50%, -50%);
+}
+
+.navbar-canvas-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 23;
+  background-color: rgba(0, 0, 0, 0.377);
+}
+
+.navbar-canvas {
+  z-index: 25;
 }
 
 /* The typing effect */
