finish setting upcreating adilbs and stuff

--- a/client_v2/src/index.css
+++ b/client_v2/src/index.css
@@ -34,7 +34,7 @@ video {
 
 .custom-grid {
   display: grid;
-  grid-template-columns: 2fr 6fr 2fr;
+  grid-template-columns: 1fr;
 }
 
 .grid-aside {
@@ -169,7 +169,11 @@ video {
 
 @media screen and (min-width: 1024px) {
   .grid-aside {
-    /* grid-template-columns: 3fr 2fr; */
+    grid-template-columns: 2fr 6fr 2fr;
+  }
+
+  .custom-grid {
+    grid-template-columns: 2fr 6fr 2fr;
   }
 }
 
