--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,68 +1,197 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  overflow-y: scroll;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-body {
+* {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+  font: inherit;
+}
+
+#root {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+img,
+picture,
+svg,
+video {
+  display: block;
+  max-width: 100%;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.custom-grid {
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.grid-aside {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.grid-with-aside {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.footer-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto;
+  grid-template-areas: "e e" "a b" "c c" "d d";
+}
+
+.footer-1 {
+  grid-area: a;
+}
+
+.fotoer-2 {
+  grid-area: b;
+}
+
+.footer-3 {
+  grid-area: c;
+}
+
+.footer-4 {
+  grid-area: d;
+}
+
+.footer-5 {
+  grid-area: e;
+}
+
+.navbar-canvas-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 23;
+  background-color: rgba(0, 0, 0, 0.377);
+}
+
+.navbar-canvas {
+  z-index: 25;
+}
+
+.typewriter {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: 0.15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: 0.15em; /* Adjust as needed */
+  animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
+}
+
+.modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 30;
+  background-color: rgba(0, 0, 0, 0.377);
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 35;
+  transform: translate(-50%, -50%);
+}
+
+.navbar-canvas-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 23;
+  background-color: rgba(0, 0, 0, 0.377);
+}
+
+.navbar-canvas {
+  z-index: 25;
+}
+
+.remove-underline {
+  text-decoration: none !important;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from {
+    width: 0;
   }
-  a:hover {
-    color: #747bff;
+  to {
+    width: 100%;
   }
-  button {
-    background-color: #f9f9f9;
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
   }
+  50% {
+    border-color: orange;
+  }
+}
+
+@media screen and (min-width: 500px) {
+  .footer-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: "e e e" "a b c" "d d d";
+  }
+}
+
+@media screen and (min-width: 575px) {
+}
+
+@media screen and (min-width: 768px) {
+  .footer-grid {
+    grid-template-columns: 2fr 2fr 2fr 2fr;
+    grid-template-areas: "a b c d" "e e e e";
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .grid-aside {
+    grid-template-columns: 2fr 6fr 2fr;
+  }
+
+  .grid-with-aside {
+    grid-template-columns: 2fr 10fr;
+  }
+
+  .custom-grid {
+    grid-template-columns: 2fr 6fr 2fr;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .footer-grid {
+    grid-template-columns: 2fr 2fr 2fr 3fr 3fr;
+    grid-template-areas: "a b c d e";
+  }
+}
+
+@media screen and (min-width: 1536px) {
 }
